--- a/misq/template.html
+++ b/misq/template.html
@@ -8,7 +8,7 @@
 
 <meta name="author" content="John Doe">
 <meta name="author" content="his friend">
-<meta name="dcterms.date" content="2024-09-30">
+<meta name="dcterms.date" content="2024-10-01">
 <meta name="keywords" content="template, demo">
 
 <title>Untitled</title>
@@ -52,7 +52,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#introduction" id="toc-introduction" class="nav-link active" data-scroll-target="#introduction">Introduction</a></li>
   <li><a href="#more-information" id="toc-more-information" class="nav-link" data-scroll-target="#more-information">More Information</a></li>
   </ul>
-<div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="..\template.pdf"><i class="bi bi-file-pdf"></i>PDF (misq)</a></li></ul></div></nav>
+<div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="..\template.pdf"><i class="bi bi-file-pdf"></i>PDF (misq)</a></li><li><a href="template.docx"><i class="bi bi-file-word"></i>MS Word (misq)</a></li></ul></div></nav>
 </div>
 <main class="content" id="quarto-document-content">
 
@@ -93,7 +93,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">September 30, 2024</p>
+      <p class="date">October 1, 2024</p>
     </div>
   </div>
   
